// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli — --json output shape > gzipped CDXJ JSON snapshot 1`] = `
{
  "file": "<tmp>/fixture.wacz",
  "issues": [
    {
      "details": {
        "acceptedSuffixes": [
          ".cdx",
          ".cdxj",
          ".idx",
        ],
        "allIndexEntries": [
          "indexes/index.cdxj.gz",
        ],
      },
      "location": {
        "entry": "indexes/",
      },
      "message": "No wabac-recognised index file found under indexes/ — wabac.js needs at least one .cdx / .cdxj / .idx entry to serve any URL",
      "rule": "cdxj/index-recognised-by-wabac",
      "severity": "error",
    },
    {
      "location": {
        "entry": "indexes/index.cdxj.gz",
      },
      "message": "Entry "indexes/index.cdxj.gz" is a gzipped CDXJ — wabac.js does not recognise .cdxj.gz / .cdx.gz",
      "rule": "cdxj/index-not-gzipped",
      "severity": "warning",
    },
  ],
  "profile": "spec",
  "stats": {
    "hosts": [],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 1,
    "info": 0,
    "passed": 11,
    "warnings": 1,
  },
  "valid": false,
  "waxlensVersion": "0.0.0",
}
`;

exports[`cli — --json output shape > missing-profile JSON snapshot 1`] = `
{
  "file": "<tmp>/fixture.wacz",
  "issues": [
    {
      "details": {
        "expected": "data-package",
      },
      "location": {
        "entry": "datapackage.json",
      },
      "message": "datapackage.json is missing the "profile" field",
      "rule": "datapackage/profile-required",
      "severity": "error",
    },
  ],
  "profile": "spec",
  "stats": {
    "hosts": [
      "example.com",
    ],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 1,
    "info": 0,
    "passed": 11,
    "warnings": 0,
  },
  "valid": false,
  "waxlensVersion": "0.0.0",
}
`;

exports[`cli — --json output shape > valid WACZ JSON snapshot 1`] = `
{
  "file": "<tmp>/fixture.wacz",
  "issues": [],
  "profile": "spec",
  "stats": {
    "hosts": [
      "example.com",
    ],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 0,
    "info": 0,
    "passed": 12,
    "warnings": 0,
  },
  "valid": true,
  "waxlensVersion": "0.0.0",
}
`;
